style: fix input/error spacing (again)

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -167,10 +167,6 @@
   }
 
   /* custom */
-  .input {
-    margin-bottom: 0.5rem;
-  }
-
   .list {
     margin-bottom: 2rem;
     padding-left: 2rem;
